Version 2.8.2
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8.2
--------------------------------------------------------
General:
- Force installation of sddm to fix theme issue with sddm-sugar-candy theme. sddm-git doesn't work
- Wallpaper script creates a blurred version with imagemagick for wlogout background

Version 2.8.1
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8.1
--------------------------------------------------------
General:
- Swayidle replaced with hypridle (config in dotfiles/hypr/hypridle.conf)
- Swaylock replaced with hyprlock (config in dotfiles/hypr/hyprlock.conf)
- New default wallpaper in Hyprland style
- xarchiver and zip added for thunar
- Rofi border width can be adjusted in dotfiles/.settings/rofi-border.rasi
- emote added to select Emojis (SUPER+.)

ML4W Welcome App: 
- Opens Hyprland systeminfo from the about menu
- Timeshift can be installed from the settings menu
- Terminal for Thunar can be set from the settings menu

Hyprland:
- Bugfix timeshift detection in installupdates.sh 

Qtile:
- Polybar removed from the dotfiles

Version 2.8
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8
--------------------------------------------------------
Hyprland:
- New Welcome app based on GTK4. Can be launched with the icon on waybar or with the command ml4w
- nwg-look-bin to define a custom GTK Theme
- Updated waybar starter theme
- New waybar idle-inhibator icon
- New waybar theme ml4w-minimal
- New window animation variation animation-moving.conf
- New AI icon to open ChatGPT
- Hyprland installation with hyprland package only. hyprland-git removed from the installer

Version 2.7.2
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7.2
--------------------------------------------------------
Hyprland:
- New waybar icon to enable/disable swaylock. Left mouse click to toggle swaylock, right mouse click to start swaylock
- Show/Hide idle_inhibitor module (swaylock) in Settings script