@@ -1,2 +1,0 @@
-name="Show/Hide Bluetooth"
-order=1
