@@ -351,7 +351,8 @@
         "format-disabled": "",
         "format-off": "",
         "interval": 30,
-        "on-click": "blueman-manager"
+        "on-click": "blueman-manager",
+        "format-no-controller": ""
     },
 
     // Other
